@@ -464,7 +464,7 @@ The <ulink url="http://www.imdb.com">Internet Movie Database</ulink> provides in
 <title>Colnect</title>
 <para>
 <ulink url="https://colnect.com">Colnect</ulink> is an online community for collectibles providing personal collection management.
-&tellico; can search Colnect for coin and stamp information.
+&tellico; can search Colnect for coin, stamp, and comic book information.
 </para>
 </sect3>
 
